mgr: Add one finisher thread per module

Adds a finisher thread for each module. Each module command is
executed via corresponding finisher thread. There is generic
finisher thread via which all other commands like notify, config
is run.

Fixes: https://tracker.ceph.com/issues/51177
Signed-off-by: Kotresh HR <khiremat@redhat.com>
(cherry picked from commit 46de6431603a56fa9ca2a7c7c9c795f126d16452)